歌曲去重
